# whale_alert

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
app/: config.py  config.yaml  logging_config.py  main.py
app/core/: alchemy_models.py  filter.py  models.py  notifier.py  parser.py  processor.py  storage.py
app/handlers/: webhook.py
app/sources/: __init__.py  bitquery.py  btc_mempool.py  infura.py
