[project]
name = "whale-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "duckdb>=1.3.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "structlog>=25.3.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.11",
]
